added sidebars to sub pages

--- a/about-pilot.html
+++ b/about-pilot.html
@@ -12,7 +12,7 @@
 <body>
 
 <div class="logo"><a href="index.html"><p><span class="main-logo">Pilot</span><span class="sub-logo"> Development Partners, Inc.</span></p></a>
-<hr class="top-nav">
+<hr class="hr-nav">
 </div>
 <nav class="top-navigation">
   <ul>
