--- a/development-management.html
+++ b/development-management.html
@@ -35,6 +35,7 @@
   </ul>
 </nav>
 <hr>
+<div class="main-container">
 <section class="development-management container">
 <h1 class="title-heading">Development Management</h1>
 <p class="paragraph">Pilot Development Partners, Inc. and its staff have managed over three million square feet of development and construction projects. Although there are many similarities from project to project, each one has its own challenges. Our work includes actively helping clients establish development goals that reinforce their business plans and the development potential of available sites.</p>
@@ -57,6 +58,18 @@
 	<p class="paragraph">Industrial</p>
 </div>
 </section>
+<section class="side-list">
+<h3 class="sub-sub-heading">Development Project <br>Control for Owners</h3>
+<p class="paragraph"><span class="triangle theme-color">►</span> Planning</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Feasibility</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Financial Analysis</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Team Selection</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Regulatory Approvals</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Design Management</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Construction Control</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Project Administration</p>
+</section>
+</div>
 
 <footer class="footer">
   <div class="footer-container">
