--- a/development-planning.html
+++ b/development-planning.html
@@ -35,6 +35,7 @@
   </ul>
 </nav>
 <hr>
+<div class="main-container">
 <section class="development-planning container">
 <h1 class="title-heading">Development Planning</h1>
 	<p class="paragraph">Real estate and facilities development can be a complicated and risky proposition. Pilot Development’s role is to guide owners effectively and safely through this process. There is no more important component to reducing risk and achieving high performance results than engaging in early planning and feasibility analysis. Many issues, from site selection to regulatory constraints and finance, need to be considered. Effective planning and analysis is the result of owner collaboration and Pilot’s development expertise.</p>
@@ -52,6 +53,17 @@
     <img src="images/development-equation.jpg" width="600" class="development-equation">
   </div>
 </section>
+<section class="side-list">
+<p class="paragraph italic"><span class="triangle theme-color">►</span> Should we develop?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> What will it cost?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> Can we build what we want?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> What should we build?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> What should we build?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> If we build it, will they come?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> How long will it take?</p>
+<p class="paragraph italic"><span class="triangle theme-color">►</span> What are the risks?</p>
+</section>
+</div>
 
 <footer class="footer">
   <div class="footer-container">
