--- a/leed-energy.html
+++ b/leed-energy.html
@@ -36,7 +36,7 @@
   </ul>
 </nav>
 <hr>
-
+<div class="main-container">
 <section class="leed-energy container">
 	<h1 class="title-heading">LEED, Energy and Green Buildings</h1>
 		<p class="paragraph">Today, green building is influencing the entire building industry. Pilot has the skills for assisting clients to gain the most from new materials, methods and technologies.</p>
@@ -79,6 +79,15 @@
 </div>
 </div>
 </section>
+
+<section class="side-list">
+<h3 class="sub-sub-heading leed-energy">LEED <br>Leadership in Energy &<br>Environmental Design</h3>
+<p class="paragraph"><span class="triangle theme-color">►</span> What are the benefits?</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> What will it cost?</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Does it make sense?</p>
+</section>
+</div>
+</div>
 
 <footer class="footer">
   <div class="footer-container">
