added mobile navigation

--- a/about-pilot.html
+++ b/about-pilot.html
@@ -15,7 +15,16 @@
 <hr class="hr-nav">
 </div>
 <nav class="top-navigation">
-  <ul>
+  <ul class="mobile-navigation">
+    <li><a href="about-pilot.html">About Pilot</a></li>
+    <li><a href="leed-energy.html">LEED Energy</a></li>
+    <li><a href="development-planning.html">Development Planning</a></li>
+    <li><a href="development-management.html">Development Management</a></li>
+    <li><a href="property-management.html">Property Management</a></li>
+    <li><a href="capital-programs.html">Capital Programs</a></li>
+    <li><a href="our-team.html">Our Team</a></li>
+  </ul>
+  <ul class="desktop-navigation"> 
     <li><a href="about-pilot.html">About Pilot</a></li>
     <li>
       Consulting Services
@@ -54,9 +63,9 @@
 		<img src="images/bostonpan.jpg" class="boston-pan">
 	</div>
 
-  <div class="services">
+  <div class="services about">
   <h3 class="sub-heading about-page">We Know Buildings</h3>
-  <div class="services-list">
+  <div class="services-list mobile-list">
     <p class="service">► How to plan</p>
     <p class="service">► How to build</p>
     <p class="service">► How to manage</p>
@@ -67,7 +76,7 @@
 <footer class="footer">
   <div class="footer-container">
   <div class="footer-logo">
-    <h1 class="footer-logo-heading">Pilot</h1>
+    <h1 class="footer-logo-heading" style="font-size: 48px !important;">Pilot</h1>
   </div>
   <div class="footer-contact">
     <p class="contact-info"><span class="underline">6 Pleasant Street,</span></p>
