--- a/capital-programs.html
+++ b/capital-programs.html
@@ -13,7 +13,16 @@
 <hr>
 </div>
 <nav class="top-navigation">
-  <ul>
+  <ul class="mobile-navigation">
+    <li><a href="about-pilot.html">About Pilot</a></li>
+    <li><a href="leed-energy.html">LEED Energy</a></li>
+    <li><a href="development-planning.html">Development Planning</a></li>
+    <li><a href="development-management.html">Development Management</a></li>
+    <li><a href="property-management.html">Property Management</a></li>
+    <li><a href="capital-programs.html">Capital Programs</a></li>
+    <li><a href="our-team.html">Our Team</a></li>
+  </ul>
+  <ul class="desktop-navigation">
     <li><a href="about-pilot.html">About Pilot</a></li>
     <li>
       Consulting Services
@@ -36,6 +45,7 @@
 </nav>
 <hr>
 
+<div class="main-container">
 <section class="capital-programs container">
 <h1 class="title-heading">Capital Improvements</h1>
 <p class="paragraph">Capital improvement programs represent an area where Pilot Development Partners, Inc. has been especially effective. Many properties need improvements that may be beyond the normal experience of owners, property managers or facilities staff to manage directly. Important components of buildings deteriorate, or become obsolete. Owners may want to reposition their structures for refinancing, for change of use, to implement major energy improvements or to maximize sale value. From energy improvement programs to major renovations, Pilot has the expertise to manage the capital improvement process, even when buildings must remain fully occupied.</p>
@@ -52,6 +62,17 @@ pricing of $850,000 for replacement of the balconies, but not the railings. Pilo
 </div>
 <p class="paragraph italic">Pilot welcomes the opportunity to meet with prospective clients to discuss our experience, and the possibilities for their properties.</p>
 </section>
+
+<section class="side-list">
+<h3 class="sub-sub-heading">Plan</h3>
+<p class="paragraph"><span class="triangle theme-color">►</span> What are the priorities?</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> What will it cost?</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> How should it be<br>accomplished?</p>
+<h3 class="sub-sub-heading">Manage</h3>
+<p class="paragraph"><span class="triangle theme-color">►</span> Construction Control</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Project Administration</p>
+</section>
+</div>
 
 <footer class="footer">
   <div class="footer-container">
