--- a/index.html
+++ b/index.html
@@ -14,7 +14,16 @@
 <hr class="hr-nav">
 </div>
 <nav class="top-navigation">
-  <ul>
+  <ul class="mobile-navigation">
+    <li><a href="about-pilot.html">About Pilot</a></li>
+    <li><a href="leed-energy.html">LEED Energy</a></li>
+    <li><a href="development-planning.html">Development Planning</a></li>
+    <li><a href="development-management.html">Development Management</a></li>
+    <li><a href="property-management.html">Property Management</a></li>
+    <li><a href="capital-programs.html">Capital Programs</a></li>
+    <li><a href="our-team.html">Our Team</a></li>
+  </ul>
+  <ul class="desktop-navigation">
     <li><a href="about-pilot.html">About Pilot</a></li>
     <li>
       Consulting Services
@@ -42,7 +51,7 @@
 
 <section class="services">
   <h3 class="sub-heading">Providing Management & Advisory Services to:</h3>
-  <div class="services-list">
+  <div class="services-list mobile-list">
     <p class="service">► Owners</p>
     <p class="service">► Investors</p>
     <p class="service">► Institutions</p>
