--- a/property-management.html
+++ b/property-management.html
@@ -13,7 +13,16 @@
 <hr>
 </div>
 <nav class="top-navigation">
-  <ul>
+  <ul class="mobile-navigation">
+    <li><a href="about-pilot.html">About Pilot</a></li>
+    <li><a href="leed-energy.html">LEED Energy</a></li>
+    <li><a href="development-planning.html">Development Planning</a></li>
+    <li><a href="development-management.html">Development Management</a></li>
+    <li><a href="property-management.html">Property Management</a></li>
+    <li><a href="capital-programs.html">Capital Programs</a></li>
+    <li><a href="our-team.html">Our Team</a></li>
+  </ul>
+  <ul class="desktop-navigation">
     <li><a href="about-pilot.html">About Pilot</a></li>
     <li>
       Consulting Services
@@ -36,6 +45,7 @@
 </nav>
 <hr>
 
+<div class="main-container">
 <section class="property-management container">
 <h1 class="title-heading">Property Management</h1>
 <p class="paragraph">Pilot Development has managed a variety of real estate properties for the past ten years, including office, R&D, industrial and residential. We welcome engagements for small to medium sized properties located in Greater Boston communities out to Route 128. Our strength is in commercial properties to 100,000 square feet. We are also experienced with management of small retail strip centers. Our property management property owners have included individuals and institutional investors.</p>
@@ -52,6 +62,14 @@ emergencies.</p>
 	<p class="paragraph italic">Pilot Development manages properties in a safe, responsible, and cost-conscious manner. We have friendly and professional relationships with tenants and contractors. We focus always on our clients’ investment goals.</p>
 </div>
 </section>
+
+<section class="side-list">
+<p class="paragraph"><span class="triangle theme-color">►</span> Responsive<br> Management</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Efficient Operation</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Accurate Reporting</p>
+<p class="paragraph"><span class="triangle theme-color">►</span> Market Aware</p>
+</section>
+</div>
 
 <footer class="footer">
   <div class="footer-container">
