--- a/our-team.html
+++ b/our-team.html
@@ -14,7 +14,16 @@
 <hr>
 </div>
 <nav class="top-navigation">
-  <ul>
+  <ul class="mobile-navigation">
+    <li><a href="about-pilot.html">About Pilot</a></li>
+    <li><a href="leed-energy.html">LEED Energy</a></li>
+    <li><a href="development-planning.html">Development Planning</a></li>
+    <li><a href="development-management.html">Development Management</a></li>
+    <li><a href="property-management.html">Property Management</a></li>
+    <li><a href="capital-programs.html">Capital Programs</a></li>
+    <li><a href="our-team.html">Our Team</a></li>
+  </ul>
+  <ul class="desktop-navigation">
     <li><a href="about-pilot.html">About Pilot</a></li>
     <li>
       Consulting Services
