--- a/about-pilot.html
+++ b/about-pilot.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>About Pilot</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="title" content="About Pilot"/>
+  <meta name="description" content="Pilot Development Partners, Boston"/>
   
 	<link rel="stylesheet" type="text/css" href="css/reset.css">
 	<link rel="stylesheet" type="text/css" href="scss/styles.css">
