--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Pilot Development Home</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="title" content="Home Page"/>
+  <meta name="description" content="Pilot Development Partners, Boston"/>
 
 	<link rel="stylesheet" type="text/css" href="scss/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300,500,700" rel="stylesheet">
