--- a/our-team.html
+++ b/our-team.html
@@ -4,6 +4,8 @@
 	<meta charset="UTF-8">
 	<title>Our Team</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="title" content="Our Team"/>
+  <meta name="description" content="Pilot Development Partners, Boston"/>
   
 	<link rel="stylesheet" type="text/css" href="scss/styles.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,700" rel="stylesheet">
